--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Free EBook Notifier</string>
     <string name="claim_this_book">Claim this Book</string>
+    <string name="FREE_BOOK_URL">https://www.packtpub.com/packt/offers/free-learning</string>
 </resources>
